--- a/asd-projects/walker/index.css
+++ b/asd-projects/walker/index.css
@@ -11,11 +11,30 @@ body {
   position: relative;
 }
 
-#gameItem {
+#walker {
   background-color: teal;
   width: 50px;
   height: 50px;
   position: absolute;
-/*   left: 100px; */  /* Uncomment if you want to set a "starting" position */
-/*   top: 100px;  */  /* Uncomment if you want to set a "starting" position */
+  border-radius: 50px;
+  
+}
+
+#walker2 {
+  background-color: teal;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  border-radius: 50px;
+  
+}
+
+h1 {
+  color: teal;
+  font-size: 40px;
+  text-shadow: 2px 2px white
+}
+
+.it {
+  background-color: red;
 }
